--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+html,body{
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+
 #menu
 {
 	position: fixed;
@@ -32,3 +41,13 @@
 	left: 27.5%;
 	color: #fff;	
 }
+
+.parent {
+	margin: 1rem;
+	padding: 2rem 2rem;
+	text-align: center;
+  }
+.child {
+	display: inline-block;
+	vertical-align: middle;
+  }
