--- a/style.css
+++ b/style.css
@@ -122,4 +122,6 @@ input[type=text], input[type=password], input[type=color],  input[type=email] {
     border-radius: 25px;
     background-color: rgba(155, 100, 100, 0.4);
 }
-
+canvas {
+    border: 2px solid black;
+}
