need to play audio and fix monsters bug

--- a/style.css
+++ b/style.css
@@ -125,3 +125,38 @@ input[type=text], input[type=password], input[type=color],  input[type=email] {
 canvas {
     border: 2px solid black;
 }
+
+#topLable{
+  font-size: 20px;
+  font-weight: 600;
+  background-image: linear-gradient(to left, #00ccff, #ff0000);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+}
+
+#wirteNice {
+  background-color: rgb(184, 116, 14);
+  box-shadow: 0 5px 0 rgb(124, 65, 11);
+  color: white;
+  padding: 0.5em 0.5em;
+  position: absolute;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+#wirteNice:hover {
+  background-color: #ff7b00;
+}
+
+#wirteNice:active {
+  box-shadow: none;
+  top: 5px;
+}
+
+.modal {
+  text-align: center;
+  font-weight: bold;
+}
+
+audio{display: none;}
